@@ -12,7 +12,7 @@
 # Note that after running these tests, entries will be left behind in the
 # message catalogs for locales foo, foo_BAR, and foo_BAR_baz.
 #
-# RCS: @(#) $Id: msgcat.test,v 1.20 2006/09/11 15:58:01 andreas_kupries Exp $
+# RCS: @(#) $Id$
 
 package require Tcl 8.2
 if {[catch {package require tcltest 2}]} {
@@ -55,7 +55,8 @@ namespace eval ::msgcat::test {
 	set result [string tolower [lindex $setVars 0]]
 	if {[string length $result] == 0} {
 	    if {[info exists ::tcl::mac::locale]} {
-		set result [string tolower $::tcl::mac::locale]
+		set result [string tolower \
+			[msgcat::ConvertLocale $::tcl::mac::locale]]
 	    } else {
 		set result c
 	    }
